# Compression-Algorithms-Comprasion

./: Algorithm.cpp  Algorithm.h  CodeReader.cpp  CodeReader.h  CodeWriter.cpp  CodeWriter.h  EncoderDictionary.cpp  EncoderDictionary.h  Huffman.cpp  Huffman.h  IInputStream.h  IOutputStream.h  Input.cpp  Input.h  LZW.cpp  LZW.h  Makefile  Output.cpp  Output.h  README.md  Selection.cpp  Selection.h  logger.cpp  logger.h
files_for_compress/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
tests/TestHuffman/: CMakeLists.txt  TestHuffman.cpp
tests/TestLZW/: CMakeLists.txt  TestLZW.cpp
tests/TestSelection/: CMakeLists.txt  TestSelection.cpp
